fix profile gap

--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -133,6 +133,7 @@
 @media screen and (max-width: 1000px) {
   .profile {
     flex-direction: column;
+    gap: 20px;
   }
 
   .profile__image {
@@ -146,5 +147,9 @@
   .profile__name {
     font-size: 24px;
     line-height: 26px;
+  }
+
+  .profile__about-me{
+      text-align: center;
   }
 }
